[package]
name = "trep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4", features = ["derive"] }
ignore = "0.4.22"
regex = "1.10.3"
tree-sitter = "0.20.10"
tree-sitter-python = "0.20.4"
